// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs/Checkbox Disabled smoke-test 1`] = `
<label class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementStart css-mui-classname"
       data-cy="checkbox"
       style="margin: 0px;"
>
  <span class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mui-classname"
        data-cy="checkbox-check"
  >
    <input disabled
           type="checkbox"
           data-indeterminate="false"
           data-cy="checkbox-input"
           class="PrivateSwitchBase-input css-mui-classname"
           checked
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
    >
      <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z">
      </path>
    </svg>
  </span>
</label>
`;

exports[`Inputs/Checkbox Intermediate smoke-test 1`] = `
<label class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart css-mui-classname"
       data-cy="checkbox"
       style="margin: 0px;"
>
  <span class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mui-classname"
        data-cy="checkbox-check"
  >
    <input type="checkbox"
           data-indeterminate="true"
           aria-checked="mixed"
           data-cy="checkbox-input"
           class="PrivateSwitchBase-input css-mui-classname"
           checked
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
    >
      <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z">
      </path>
    </svg>
  </span>
</label>
`;

exports[`Inputs/Checkbox Label smoke-test 1`] = `
<label class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart css-mui-classname"
       data-cy="checkbox"
>
  <span class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mui-classname"
        data-cy="checkbox-check"
  >
    <input type="checkbox"
           data-indeterminate="false"
           data-cy="checkbox-input"
           class="PrivateSwitchBase-input css-mui-classname"
           checked
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
    >
      <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z">
      </path>
    </svg>
  </span>
  <span class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-mui-classname">
    Checkbox
  </span>
</label>
`;

exports[`Inputs/Checkbox LabelEnd smoke-test 1`] = `
<label class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mui-classname"
       data-cy="checkbox"
>
  <span class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mui-classname"
        data-cy="checkbox-check"
  >
    <input type="checkbox"
           data-indeterminate="false"
           data-cy="checkbox-input"
           class="PrivateSwitchBase-input css-mui-classname"
           checked
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
    >
      <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z">
      </path>
    </svg>
  </span>
  <span class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-mui-classname">
    Checkbox
  </span>
</label>
`;

exports[`Inputs/Checkbox Localized smoke-test 1`] = `
<label class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart css-mui-classname"
       data-cy="locale.checkbox"
>
  <span class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mui-classname"
        data-cy="locale.checkbox-check"
  >
    <input type="checkbox"
           data-indeterminate="false"
           data-cy="locale.checkbox-input"
           class="PrivateSwitchBase-input css-mui-classname"
           checked
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
    >
      <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z">
      </path>
    </svg>
  </span>
  <span class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-mui-classname">
    Spunta
  </span>
</label>
`;

exports[`Inputs/Checkbox Primary smoke-test 1`] = `
<label class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart css-mui-classname"
       data-cy="checkbox"
       style="margin: 0px;"
>
  <span class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mui-classname"
        data-cy="checkbox-check"
  >
    <input type="checkbox"
           data-indeterminate="false"
           data-cy="checkbox-input"
           class="PrivateSwitchBase-input css-mui-classname"
           checked
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
    >
      <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z">
      </path>
    </svg>
  </span>
</label>
`;

exports[`Inputs/Checkbox SizeSmall smoke-test 1`] = `
<label class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart css-mui-classname"
       data-cy="checkbox"
       style="margin: 0px;"
>
  <span class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-mui-classname"
        data-cy="checkbox-check"
  >
    <input type="checkbox"
           data-indeterminate="false"
           data-cy="checkbox-input"
           class="PrivateSwitchBase-input css-mui-classname"
           checked
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
    >
      <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z">
      </path>
    </svg>
  </span>
</label>
`;

exports[`Inputs/Checkbox Styled smoke-test 1`] = `
<label class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart css-mui-classname"
       data-cy="checkbox"
       style="margin: 0px;"
>
  <span class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mui-classname"
        data-cy="checkbox-check"
        style="background-color: red; color: white;"
  >
    <input type="checkbox"
           data-indeterminate="false"
           data-cy="checkbox-input"
           class="PrivateSwitchBase-input css-mui-classname"
           checked
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
    >
      <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z">
      </path>
    </svg>
  </span>
</label>
`;

exports[`Inputs/Checkbox Unchecked smoke-test 1`] = `
<label class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart css-mui-classname"
       data-cy="checkbox"
       style="margin: 0px;"
>
  <span class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mui-classname"
        data-cy="checkbox-check"
  >
    <input type="checkbox"
           data-indeterminate="false"
           data-cy="checkbox-input"
           class="PrivateSwitchBase-input css-mui-classname"
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
    >
      <path d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z">
      </path>
    </svg>
  </span>
</label>
`;
